<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome</string>
    <string name="active_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="personal_stats">Personal Stats</string>
    <string name="discard_message">Event Discarded</string>
    <string name="save_message">Event Saved</string>
    <string name="comment_prompt">Add a comment here</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="ahr_prompt">Set heart rate:</string>
    <string name="pick_toppings">Pick friends</string>
    <string name="pick_friends">Pick yo friends!</string>
    <string name="location_prompt">Location</string>
    <string name="social_pref">SOCIAL</string>
    <string name="locations_pref">LOCATIONS</string>
    <string name="home_address">Home Address</string>
    <string name="home_address_prompt">Please enter your full home address:</string>
    <string name="work_address">Work Address</string>
    <string name="work_address_prompt">Please enter your full work address:</string>
    <string name="push_pref">PUSH NOTIFICATIONS</string>
    <string name="notify_me">Notify me</string>
    <string name="notify_others">Allow others to send me notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="login">Login</string>
    <string name="app_id">1626127007605862</string>
    <string name="server_address">http://1-dot-mindful-quasar-86906.appspot.com</string>
    <string name="service_label">OnTime</string>
    <string name="service_started">You have a pending invite from</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="create_event">Create Event</string>
    <string name="title">Title</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search for a location</string>
    <string name="search_settings">Search Places</string>
    <string name="hint_title">Enter name of event</string>
    <string name="ui_title">Event name</string>
    <string name="dialog_fragment_positive_button">Save</string>
    <string name="dialog_fragment_negative_button">Cancel</string>
    <string name="marker_latitude">MARKER_LATITUDE</string>
    <string name="marker_longitude">MARKER_LONGITUDE</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="thisweek">THIS WEEK AND BEYOND</string>
    <string name="title_activity_settings_page">SettingsPage</string>
    <string name="settings">Settings</string>
    <string name="login_fb">Login with Facebook</string>
    <string name="title_activity_event_display">EventDisplayActivity</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="choose">Choose Friends to Invite</string>
    <string name="ok">Ok</string>
    <string name="pref_saved">\"Preferences saved\"</string>
    <string name="pref_cancel">Preferences cancelled</string>
    <string name="preference">Preference</string>
    <string name="me">me</string>
    <string name="others">others</string>

</resources>
